# Udacity

./: Behavioral Cloning Project3  Behavioral_Cloning.ipynb  Project3.ipynb  README.md  Traffic_Sign_Classifier.ipynb  Vehicle_Detection.ipynb  WorkNotes.ipynb  drive.py  model.py  writeup_report.md
Behavioral Cloning/: README.md  writeup_report.md
CarND-Advanced-Lane-Finding/: Advanced_Lane_Finding.ipynb  Advanced_Lane_Finding_Final.ipynb  CalibrationPoints.pickle
CarND-Advanced-Lane-Finding/.ipynb_checkpoints/: Advanced_Lane_Finding-checkpoint.ipynb
CarND-MPC-Project/: README.md
CarND-MPC-Project/src/: MPC.cpp  main.cpp
CarND-MPC-Quizzes/global_kinematic_model/nbproject/: configurations.xml  project.xml
CarND-MPC-Quizzes/mpc_to_line/src/: MPC.cpp  (+1 more)
CarND-PID-Control-Project/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  pid
CarND-PID-Control-Project/nbproject/: configurations.xml
CarND-PID-Control-Project/src/: PID.cpp  PID.h  main.cpp
CarND-Path-Planning-Project/: README.md  path_planning
CarND-Path-Planning-Project/nbproject/: configurations.xml  project.xml
CarND-Path-Planning-Project/src/: main.cpp
CarND-Semantic-Segmentation/: README.md  main.py
CarND-Unscented-Kalman-Filter-Project/nbproject/: configurations.xml  project.xml
CarND-Unscented-Kalman-Filter-Project/src/: tools.cpp  ukf.cpp  ukf.h
KalmanFilter/: CMakeLists.txt
KalmanFilter/nbproject/: configurations.xml
KalmanFilter/nbproject/private/: configurations.xml  private.xml
KalmanFilter/src/: FusionEKF.cpp  kalman_filter.cpp  tools.cpp
(+14 files in other folders)
